# tasktracker-cli

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: python-app.yml
src/: __init__.py  cli.py  database.py  model.py  operations.py  style.py  task_entities_config.py
src/storage/: task.json
src/tasktracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tasktracker.egg-info/: SOURCES.txt  entry_points.txt
tests/: test_cli.py  test_database.py  test_model.py  test_operations.py
